--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link 
+    href="https: //fonts.googleapis.com/css2? 
+      family= Josefin+Sans:ital,wght@1,500 & display=swap" rel="stylesheet">"
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="" alt="">
+        <div>
+            <h1></h1>
+            <p></p>
+            <a href=""></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
-    <footer>
-        
+    <footer>      
     </footer>
 </body>
 </html>
