--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <title>Document</title>
     <link 
     href="https: //fonts.googleapis.com/css2? 
-      family= Josefin+Sans:ital,wght@1,500 & display=swap" rel="stylesheet">"
+      family= Josefin+Sans:ital,wght@1,500 & display=swap" rel="stylesheet"/>
+      <link rel="stylesheet" href="./styles.css" />
+      
 </head>
 <body>
     <header>
-        <img src="" alt="">
-        <div>
-            <h1></h1>
-            <p></p>
-            <a href=""></a>
+        <img src="./assets/img/logo.svg" alt=""/>
+        <div class="header--title--container">
+            <h1>La proxima revolucion en el intercambio de criptomonedas</h1>
+            <p> 
+                Badatabit te ayuda a navegar entre los diferentes precios y tendencias.
+            </p>
+            <a href="header--button"
+            >Conoce nuestros planes<span>i</span>
+        </a>
         </div>
     </header>
     <main>
