--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <header>
         <img src="./assets/img/logo.svg" alt=""/>
         <div class="header--title--container">
-            <h1>La proxima revolucion en el intercambio de criptomonedas</h1>
+            <h1>La proxima revolucion
+                 en el intercambio de
+                  criptomonedas</h1>
+                  
             <p> 
-                Badatabit te ayuda a navegar entre los diferentes precios y tendencias.
+                Badatabit te ayuda a navegar entre los diferentes
+                 precios y tendencias.
             </p>
             <a href="header--button"
             >Conoce nuestros planes<span>i</span>
