--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             <h1>La proxima revolucion
                  en el intercambio de
                   criptomonedas</h1>
-                  
+
             <p> 
                 Badatabit te ayuda a navegar entre los diferentes
                  precios y tendencias.
             </p>
-            <a href="header--button"
+            <a href="" class="header--button"
             >Conoce nuestros planes<span>i</span>
+            
         </a>
         </div>
     </header>
