--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link 
     href="https: //fonts.googleapis.com/css2? 
       family= Josefin+Sans:ital,wght@1,500 & display=swap" rel="stylesheet"/>
-      <link rel="stylesheet" href="./styles.css" />
-      
+      <link rel="stylesheet" href="./styles.css" /> 
 </head>
 <body>
     <header>
-        <img src="./assets/img/logo.svg" alt=""/>
+        <img src="./assets/img/logo.svg" alt="">
         <div class="header--title--container">
             <h1>La proxima revolucion
                  en el intercambio de
@@ -23,8 +22,8 @@
                 Badatabit te ayuda a navegar entre los diferentes
                  precios y tendencias.
             </p>
-            <a href="" class="header--button"
-            >Conoce nuestros planes<span>i</span>
+            <a href=""class="header--button"
+            >Conoce nuestros planes<span></span>
             
         </a>
         </div>
